# proof-of-thought

./: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
demo/swap-agent/: package.json  tsconfig.json
demo/swap-agent/src/: agent.ts  mock_llm.ts  run.ts
docs/: README.md  alternatives.md  future-work.md  glossary.md  tradeoffs.md
docs/adr/: 0001-optimistic-vs-zkml-vs-tee.md  0002-cbor-canonicalization.md  0003-blake3-hash-choice.md  0004-pyth-entropy-vrf.md  0005-equivalence-classes.md  0006-arweave-vs-shadow-storage.md  0007-stake-bond-economics.md  0008-recursive-pot-committee.md
docs/code-review/: 2026-04-26-initial-review.md
docs/specs/: 2026-04-26-proof-of-thought-design.md
docs/superpowers/plans/: 2026-04-26-pot-implementation.md
migrations/: deploy.ts
programs/pot_program/: Cargo.toml
programs/pot_program/src/: errors.rs  lib.rs
programs/pot_program/src/instructions/: challenge.rs  consume_thought.rs  mod.rs  register_agent.rs  register_model.rs  register_policy.rs  request_vrf.rs  resolve.rs  slash.rs  stake.rs  submit_thought.rs
programs/pot_program/src/state/: agent.rs  challenge.rs  mod.rs  model.rs  policy.rs  thought.rs  vrf.rs
sdk/ts/: package-lock.json  package.json  tsconfig.json
sdk/ts/src/: client.ts  index.ts  types.ts
sdk/ts/src/__tests__/: canonical.test.ts  program.test.ts  types.test.ts
sdk/ts/src/canonical/: builder.ts  cbor.ts  hash.ts  index.ts  schema.ts
sdk/ts/src/program/: discriminators.ts  encoding.ts  index.ts  pdas.ts
tests/: pot_program.ts
watcher/: Cargo.toml
watcher/src/: challenge.rs  config.rs  lib.rs  main.rs  subscribe.rs  trace_fetch.rs  types.rs
watcher/src/verify/: attested.rs  mod.rs  soft.rs  strict.rs
watcher/tests/: integration.rs
