[workspace]
# pot_program lives in a separate workspace because Anchor 0.30 pins solana 1.x
# while the watcher uses solana 2.x. Both worlds can't share a Cargo lockfile.
# `anchor build` reads programs/pot_program/Cargo.toml directly.
members = ["watcher"]
exclude = ["programs/pot_program", ".worktrees"]
resolver = "2"

[workspace.metadata]
description = "Proof of Thought (PoT) — verifiable agent reasoning on Solana"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
