[package]
name = "pot_program"
version = "0.1.0"
description = "Proof of Thought (PoT) Solana program"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "pot_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

# This program is its own Cargo workspace root so its lockfile stays
# isolated from the parent (the watcher uses solana-sdk 2.x; Anchor 0.30
# pins solana 1.x — both can't share a workspace).
[workspace]
